# Sensor-Dashboard

./: CMakeLists.txt  README.md  chartwidget.cpp  chartwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sensor.h  sensorsimulator.cpp  sensorsimulator.h
